# sparselist

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
docs/: conf.py  index.rst
src/sparselist/: __init__.py  sparselist.py
tests/: test_sparselist.py
