[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparselist"
version = "1.0.0"
description = "A memory-efficient list that stores only explicitly-set values"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anansi Development", email = "anansefo@anansidev.com"}
]
keywords = ["sparse", "list", "memory-efficient", "data-structures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sparselist"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--cov=sparselist",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src/sparselist"]

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "C4", "DTZ", "ISC", "ICN", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PLE", "PLR", "PLW", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "PLR0913", "PLR2004", "PT006", "PT011"]

# Coverage configuration
[tool.coverage.run]
source = ["src/sparselist"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# Tox configuration
[tool.tox]
env_list = ["py310", "py311", "py312", "py313", "py314"]

[tool.tox.env_run_base]
description = "Run tests with pytest and type checking with mypy"
deps = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8"
]
commands = [
    ["mypy", "src/sparselist"],
    ["pytest", "{posargs}"]
]
